Development
	Updated Korean translation
	Apply patch to make fullscreen work under tiled window managers
	Set pref_volume to stored volume when asound is disabled
	make --volume work with and without softvol enabled
	cmd line option --volume should only work with softvol enabled
	Fix problem with remembered softvol not being loaded Issue #675
1.0.8
	Updated Spanish translation	
	Apply patch from Issue 673
    	Updated German translation
    	Updated Japanese translation
	Updated Portuguese translation
	Set the subtitle visibility in set_media_player_attributes
	Fix fullscreen activation using defined accelerator key
1.0.8b
	Updated Polish translation
	Run make update-po
	Add volume control type display to preference screen
	Update spec.in file for libgda
	Switch back to using CURL instead of GIO for cover art retrieval
	Change "Save" in context menu to "Save As"
	Fix problem with localized positions in mark_uri_in_db_as_resumable 
	Fix libgda compile issue
	Rework database code to use GValues instead of sql commands, should avoid localization issues
	Apply patch from Issue #669 to fix network stream regression
	Hide some items on the context menu, when not under plugin control
	Additional changes to Japanese translation
	Updated Japanese translation
	Updated Polish translation
	Fix Issue #667 - Subtitles not hidden by default when specified
	Updated Korean and Portuguese translations
	Add "Play Single Track from Playlist" under Edit menu
	Mark streams and CDs as playable when adding to playlist
	Present a warning message when about to overwrite a file on save
	Resize player when on video present event
	Fix some layout issues when playing audio only files
	Ensure the Gvalue contains a double before trying to use it
	Ellipsize items on the playlist, so they don't add extra spacing to the list
	Add gl3 to list of available VOs. make sure mplayer2 supports this on your setup before setting
	Save media state in file->open and file->recent selections